<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.1.4</version>
		<relativePath />
	</parent>

	<groupId>org.hobbit</groupId>
	<artifactId>hobbit-tools</artifactId>
	<version>3.1.4-SNAPSHOTS</version>
	<packaging>pom</packaging>
	<description>基于spring boot 3.1.4版本</description>

	<properties>
		<maven.compiler.source>21</maven.compiler.source>
		<maven.compiler.target>21</maven.compiler.target>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<modules>
		<module>hobbit-bom</module>
		<module>hobbit-core-context</module>
		<module>hobbit-core-tool</module>
		<module>hobbit-core-launch</module>
		<module>hobbit-core-log</module>
		<module>hobbit-core-boot</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.hobbit.platform</groupId>
				<artifactId>hobbit-bom</artifactId>
				<version>3.1.4</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot</artifactId>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
		</dependency>
	</dependencies>

	<repositories>
		<repository>
			<id>aliyun-repos</id>
			<url>https://maven.aliyun.com/repository/public/</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>

	<profiles>
		<profile>
			<id>develop</id>
			<build>
				<plugins>
					<!-- 打source包 -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.0.1</version>
						<configuration>
							<attach>true</attach>
						</configuration>
						<executions>
							<execution>
								<phase>compile</phase>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
